[new] Two new routes to create a user and verify if a email is taken or not.
[changes] Minimal doc changes.
